--- a/CookieClicker/CookieClicker.csproj
+++ b/CookieClicker/CookieClicker.csproj
@@ -22,6 +22,9 @@
     <None Remove="Images\grandmere.png" />
     <None Remove="Images\Heritage.png" />
     <None Remove="Images\Info.png" />
+    <None Remove="Images\milieu_ferme.png" />
+    <None Remove="Images\milieu_gm.png" />
+    <None Remove="Images\milieu_mine.png" />
     <None Remove="Images\mine.png" />
     <None Remove="Images\Option.png" />
     <None Remove="Images\Statistiques.png" />
@@ -124,6 +127,15 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\Info.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\milieu_ferme.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\milieu_gm.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\milieu_mine.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\mine.png">
