--- a/CookieClicker/CookieClicker.csproj
+++ b/CookieClicker/CookieClicker.csproj
@@ -16,6 +16,14 @@
     <None Remove="Images\cookie.jpg" />
     <None Remove="Images\CursorUpgrade.png" />
     <None Remove="Images\CursorUpgrade1.png" />
+    <None Remove="Images\CursorUpgrade10.png" />
+    <None Remove="Images\CursorUpgrade3.png" />
+    <None Remove="Images\CursorUpgrade4.png" />
+    <None Remove="Images\CursorUpgrade5.png" />
+    <None Remove="Images\CursorUpgrade6.png" />
+    <None Remove="Images\CursorUpgrade7.png" />
+    <None Remove="Images\CursorUpgrade8.png" />
+    <None Remove="Images\CursorUpgrade9.png" />
     <None Remove="Images\ferme.png" />
     <None Remove="Images\GM1.jpg" />
     <None Remove="Images\GM2.jpg" />
@@ -113,6 +121,30 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\CursorUpgrade1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\CursorUpgrade10.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\CursorUpgrade3.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\CursorUpgrade4.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\CursorUpgrade5.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\CursorUpgrade6.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\CursorUpgrade7.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\CursorUpgrade8.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\CursorUpgrade9.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\ferme.png">
