--- a/CookieClicker/CookieClicker.csproj
+++ b/CookieClicker/CookieClicker.csproj
@@ -14,6 +14,7 @@
     <None Remove="Images\bords.png" />
     <None Remove="Images\click.png" />
     <None Remove="Images\cookie.jpg" />
+    <None Remove="Images\cookie1.png" />
     <None Remove="Images\CursorUpgrade.png" />
     <None Remove="Images\CursorUpgrade1.png" />
     <None Remove="Images\CursorUpgrade10.png" />
@@ -100,6 +101,7 @@
     <None Remove="Ressources\Backgrounds\mapBG.jpg" />
     <None Remove="Ressources\Backgrounds\panelBG.png" />
     <None Remove="Ressources\Backgrounds\starbg.jpg" />
+    <None Remove="Ressources\CookiesEffects\Cookies\GoldenWrath Cookies\shine.png" />
     <None Remove="Ressources\CookiesEffects\Cookies\Particles\cookie1.png" />
     <None Remove="Ressources\CookiesEffects\Cookies\Particles\cookie2.png" />
     <None Remove="Ressources\CookiesEffects\Cookies\Particles\cookie3.png" />
@@ -124,6 +126,13 @@
     <None Remove="Ressources\CookiesEffects\Cookies\Particles\heart6.png" />
     <None Remove="Ressources\CookiesEffects\Cookies\Particles\heart7.png" />
     <None Remove="Ressources\CookiesEffects\Cookies\Particles\heart8.png" />
+    <None Remove="Ressources\CookiesEffects\Cookies\Screen Effects\cookieShower1.png" />
+    <None Remove="Ressources\CookiesEffects\Cookies\Screen Effects\cookieShower2.png" />
+    <None Remove="Ressources\CookiesEffects\Cookies\Screen Effects\cookieShower3.png" />
+    <None Remove="Ressources\CookiesEffects\Cookies\Screen Effects\dragonBG.png" />
+    <None Remove="Ressources\CookiesEffects\Cookies\Screen Effects\heartStorm.png" />
+    <None Remove="Ressources\CookiesEffects\Cookies\Screen Effects\snow.jpg" />
+    <None Remove="Ressources\CookiesEffects\Cookies\Screen Effects\snow2.jpg" />
     <None Remove="Songs\buy1.mp3" />
     <None Remove="Songs\buy2.mp3" />
     <None Remove="Songs\buy3.mp3" />
@@ -140,6 +149,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Images\cookie1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Images\GrandMaUpgrade (6).png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
@@ -459,6 +471,9 @@
     <Resource Include="Ressources\Backgrounds\starbg.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Ressources\CookiesEffects\Cookies\GoldenWrath Cookies\shine.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Ressources\CookiesEffects\Cookies\Particles\cookie1.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
@@ -529,6 +544,27 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Ressources\CookiesEffects\Cookies\Particles\heart8.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Ressources\CookiesEffects\Cookies\Screen Effects\cookieShower1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Ressources\CookiesEffects\Cookies\Screen Effects\cookieShower2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Ressources\CookiesEffects\Cookies\Screen Effects\cookieShower3.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Ressources\CookiesEffects\Cookies\Screen Effects\dragonBG.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Ressources\CookiesEffects\Cookies\Screen Effects\heartStorm.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Ressources\CookiesEffects\Cookies\Screen Effects\snow.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Ressources\CookiesEffects\Cookies\Screen Effects\snow2.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
