Mises à jour et ajouts de fonctionnalités
Des propriétés et méthodes ont été ajoutées dans `MainWindow.xaml.cs`  pour la gestion des états de jeu et l'ajustement des valeurs de production, modifiant l'équilibre du jeu.
La fonctionnalité d'ascension a été introduite avec l'ajout de `HeirtagePage.xaml` et `HeirtagePage.xaml.cs`, permettant aux joueurs de réinitialiser leur progression avec des avantages. Une méthode `Reset` a été ajoutée dans `Cookie.cs` pour appuyer cette fonctionnalité.

Enfin, un nouveau fichier `GameState.cs` a été créé pour gérer les différents états du jeu.

--- a/CookieClicker/CookieClicker.csproj
+++ b/CookieClicker/CookieClicker.csproj
@@ -49,6 +49,7 @@
     <None Remove="Images\oasis.gif" />
     <None Remove="Images\Option.png" />
     <None Remove="Images\perfectCookie.png" />
+    <None Remove="Images\PerfectShine.png" />
     <None Remove="Images\sprite.png" />
     <None Remove="Images\Statistiques.png" />
     <None Remove="Images\tile000.png" />
@@ -333,6 +334,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\perfectCookie.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\PerfectShine.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\sprite.png">
